--- a/src/app/containers/td/td-quote-filters/td-quote-filters.component.scss
+++ b/src/app/containers/td/td-quote-filters/td-quote-filters.component.scss
@@ -60,6 +60,7 @@
         padding: 8px 36px;
         border: 1px solid lightgray;
         width: 100%;
+        font-size: 16px;
 
         &:focus-visible {
             outline: none;
